--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <script src="./sololearn-exercises.js"></script>
+    <script src="./dowhileloop.js"></script>
+    <script src="./continue.js"></script>
     <h1>Testing JavaScript</h1>
     <p>Today is friday</p>
 </body>
